--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/button": "^6.0.0",
     "@material/card": "^6.0.0",
     "@material/react-card": "^0.15.0",
     "@testing-library/jest-dom": "^4.2.4",
