--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "bulma": "^0.8.2",
+    "flickity": "^2.2.1",
+    "imports-loader": "^0.8.0",
     "material-components-web": "^6.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-flickity-component": "^3.5.0",
     "react-icons": "^3.10.0",
+    "react-images": "^1.1.7",
+    "react-images-viewer": "^1.6.2",
+    "react-multi-carousel": "^2.5.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-styled-carousel": "^0.5.1",
     "reactstrap": "^8.4.1",
+    "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.1.1"
   },
   "scripts": {
