--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-images": "^1.1.7",
     "react-images-viewer": "^1.6.2",
     "react-multi-carousel": "^2.5.5",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-styled-carousel": "^0.5.1",
     "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
     "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.1.1"
   },
