Added new ChurchReadingPage

--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "flickity": "^2.2.1",
     "imports-loader": "^0.8.0",
     "material-components-web": "^6.0.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
+    "react-animated-slider": "^2.0.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-flickity-component": "^3.5.0",
     "react-icons": "^3.10.0",
     "react-images": "^1.1.7",
     "react-images-viewer": "^1.6.2",
+    "react-img-carousel": "^1.7.0",
     "react-multi-carousel": "^2.5.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
