--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-simple-image-viewer": "0.0.4",
+    "react-spring": "^9.0.0-rc.3",
+    "react-spring-3d-carousel": "^1.2.0",
     "react-styled-carousel": "^0.5.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
