--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-multi-carousel": "^2.5.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.0.0",
     "react-scripts": "3.4.1",
     "react-simple-image-viewer": "0.0.4",
     "react-spring": "^9.0.0-rc.3",
