Changed code in NavbarTop component

--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.2",
     "bulma": "^0.8.2",
     "flickity": "^2.2.1",
     "formik": "^2.1.5",
     "imports-loader": "^0.8.0",
+    "jquery": "^3.5.1",
     "material-components-web": "^6.0.0",
     "normalize.css": "^8.0.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-animated-slider": "^2.0.0",
     "react-bootstrap": "^1.0.1",
@@ -29,7 +31,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.0.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-simple-image-viewer": "0.0.4",
     "react-spring": "^9.0.0-rc.3",
     "react-spring-3d-carousel": "^1.2.0",
