--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.13.1",
     "react-animated-slider": "^2.0.0",
     "react-bootstrap": "^1.3.0",
+    "react-bulma-components": "^3.4.0",
     "react-dom": "^16.13.1",
     "react-flickity-component": "^3.5.0",
     "react-icons": "^3.10.0",
@@ -36,7 +37,7 @@
     "react-spring": "^9.0.0-rc.3",
     "react-spring-3d-carousel": "^1.2.0",
     "react-styled-carousel": "^0.5.1",
-    "reactstrap": "^8.5.1",
+    "reactstrap": "^8.6.0",
     "redux": "^4.0.5",
     "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.1.1"
